created maps and added base maps using contextily.

--- a/lessons/lesson-3/spatial-join.ipynb
+++ b/lessons/lesson-3/spatial-join.ipynb
@@ -96,6 +96,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc0472b39e03fdc0",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import geopandas\n",
@@ -113,11 +120,7 @@
     "    ),\n",
     ")\n",
     "population_grid.crs = \"EPSG:3879\"  # for WFS data, the CRS needs to be specified manually"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "fc0472b39e03fdc0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
